@@ -118,6 +118,7 @@ GPREDICTSRC = \
 	predict-tools.c \
 	qth-editor.c \
 	radio-conf.c \
+	rig-io.c \
 	rotor-conf.c \
 	rdv.c \
 	sat-cfg.c \
