@@ -1,3 +1,9 @@
+2008-04-20; Alexandru Csete <oz9aec@gmail.com>
+
+    * src/rig-io.[ch]:
+    Added generic interface to hardware drivers.
+
+
 2008-03-30; Alexandru Csete <oz9aec@gmail.com>
 
     * src/gtk-freq-ctrl.c, gtk-freq-ctrl.h:
